--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  #dropdown_button2: ^2.3.9
   get: ^4.6.6
   shared_preferences: ^2.3.4
   connectivity_plus: ^6.0.5
